--- a/.gitignore
+++ b/.gitignore
@@ -33,7 +33,7 @@ backend/static/
 backend/staticfiles/
 backend/.pytest_cache/
 backend/__pycache__/
-backend/**/__pycache__/
+**/__pycache__/
 **/migrations/__pycache__/
 **/migrations/*.pyc
 
